# claude-code-python-setup

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: architect.md  code-reviewer.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
.claude/rules/: api-patterns.md  architecture.md  documentation.md  exception-handling.md  git-workflow.md  project-structure.md  security.md  testing.md
.claude/skills/postgres-patterns/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
mcp_config/: linux_mac.mcp.json  windows.mcp.json
